hphp/hack/test/typecheck/new_inference/oldtypehole/t28246566.php.like_types.exp
File "t28246566.php", line 12, characters 12-13:
Invalid return type (Typing[4110])
File "t28246566.php", line 9, characters 41-43:
Expected ~int because it is an unenforceable type
File "t28246566.php", line 9, characters 41-43:
Considering that this type argument is invariant with respect to Vector
File "t28246566.php", line 6, characters 20-27:
But got arraykey
